--- a/result_aesthetic.css
+++ b/result_aesthetic.css
@@ -1,22 +1,22 @@
 body {
     margin: 0; /* Remove default margin */
-    padding: 0; /* Remove default padding */
+    padding: 4; /* Remove default padding */
     font-family: 'Courier New', Courier, monospace;
     background-image: url('images/front-view-paper-clip-with-copy-space.jpg.jpeg');
     padding-left: 12px;
     height: 100vh;
     background-size: contain;
+    background-attachment: fixed;
     
 }
 
 
 header{
     padding: 4px; /* Add padding to header*/
-    text-align: center;
+    text-align: center; 
+    margin-top:20;
 }
-main{
-    padding: 4px;
-}
+
 
 
 footer {
@@ -55,4 +55,11 @@ main {
     margin-top: 20px; 
     margin-right :30px;
     margin-bottom: 750px;
+}
+
+.polaroid_shoes{
+    width: 80%;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-bottom: 25px;
 }
