--- a/style_shipping.css
+++ b/style_shipping.css
@@ -1,38 +1,37 @@
 body {
-    margin: 0; /* Remove default margin */
-    padding: 0; /* Remove default padding */
-    background-image: url('images/parcels-box-cardboard-boxes-smartphone-online-delivery-transportation-logistics-concept-pink-background-3d-rendering-illustration.jpg');
-    padding-left: 25px;
+  margin: 0; 
+  padding: 0; 
+  background-image: url('images/parcels-box-cardboard-boxes-smartphone-online-delivery-transportation-logistics-concept-pink-background-3d-rendering-illustration.jpg');
+  padding-left: 20px;
 
-    background-size: cover; /* Make the background image cover the entire body */
-    background-position: center top; /* Center the background image vertically and align it to the bottom */
-    background-repeat: no-repeat; /* Prevent the background image from repeating */
-    background-attachment: fixed;
-    
-    margin: 4; /* Remove default margin */
-    padding: 4; /* Remove default padding */
-    font-family: 'Courier New', Courier, monospace;
-    font-style: normal;
-    font-size: 20px;
+  background-size: cover; /* Make the background image cover the entire body */
+  background-position: center top; /* Center the background image vertically and align it to the top */
+  
+  
+  font-family: 'Courier New', Courier, monospace;
+  font-style: normal;
+  font-size: 20px;
+  color: black;
 }
 
-.input-field {
-    /* Estilo para los campos de entrada, ajusta según tus preferencias */
-    width: 34%;
-    padding: 8px; /*how big the blanks are*/
-    border: 1px solid black;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-bottom: 16px;
-    font-size: 14px;
-  }
-  main {
-    position: relative;
-    border: 5px dashed; 
-    width: 400px;
-    margin: 20px auto; /* Center the main content */
-    padding: 4px;
-    color:black;
-    margin-left: 0px;
-    
+.input-field {    
+  width: 30%; /*size of the blanks*/
+  padding: 8px; 
+  border: 1px solid black;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-bottom: 12px; 
+  
+}
+
+main {
+  width: 600px;
+  margin: 40px auto 20px; 
+  padding: 10px;
+  border: 5px dashed #F9E6E7;
+  margin-left: 0px;
+}
+
+h3{
+  font-family:'Courier New', Courier, monospace;
 }
