--- a/result_aesthetic.css
+++ b/result_aesthetic.css
@@ -1,6 +1,6 @@
 body {
-    margin: 0; /* Remove default margin */
-    padding: 4; /* Remove default padding */
+    margin: 0; 
+    padding: 4; 
     font-family: 'Courier New', Courier, monospace;
     background-image: url('images/front-view-paper-clip-with-copy-space.jpg.jpeg');
     padding-left: 12px;
@@ -12,7 +12,7 @@ body {
 
 
 header{
-    padding: 4px; /* Add padding to header*/
+    padding: 4px; 
     text-align: center; 
     margin-top:20;
 }
@@ -21,7 +21,7 @@ header{
 
 footer {
     padding: 0px;
-    position:relative; /* Necessary for absolute positioning of the image */
+    position:relative; 
     margin-left: 0px;
 }
 
@@ -29,7 +29,7 @@ main {
     position: relative;
     border: 5px dashed; 
     width: 400px;
-    margin: 20px auto; /* Center the main content */
+    margin: 20px auto; 
     padding: 8px;
     color:black;
     margin-left: 0px;
@@ -49,13 +49,6 @@ main {
     font-size: 18px;
 }
 
-#jumping-man{
-    float: right;
-    margin-left: 10px; 
-    margin-top: 20px; 
-    margin-right :30px;
-    margin-bottom: 750px;
-}
 
 .polaroid_shoes{
     width: 80%;
