--- a/PHASE2/merchandise.css
+++ b/PHASE2/merchandise.css
@@ -1,11 +1,53 @@
 table, th, td {
-    border: 3px dashed #F9E6E7;
+    border: 3px dashed white;
+    margin: 0; 
+    padding: 4; 
+    
 }
 
-.form1, .form2, .form3, .form4, .form5{
+
+body{
+    background-color: #ffebeb;
+    font-family: 'Courier New', Courier, monospace;
+
+}
+
+header{
+    padding: 4px; 
+    text-align: center; 
+    margin-top:20;
+}
+
+footer {
+    padding: 0px;
+    position:relative; 
+    margin-left: 0px;
+}
+
+.product-image{
+    width: 150px;
+    height: auto;
+    border: 5px solid black;
+    border-radius: 10px;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.5);
+}
+figcaption {
+   
+    font-weight: bold;
+}
+.product-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; /* Align items horizontally */
+    gap: 20px; /* Adjust the space between items */
+    text-align: center;
+}
+
+.form1{
     display: inline-block;
     margin-top: 0px;
-    text-align: center;
-    margin-left: 30px; 
+    margin-left: 40px; 
     margin-right:20px;
 }
+
+
