--- a/PHASE2/result_aesthetic.css
+++ b/PHASE2/result_aesthetic.css
@@ -54,8 +54,11 @@ main {
     font-size: 18px;
 }
 
-.img {
-    display: block; 
-    text-align: center; 
-    margin-bottom: 10px; 
+
+img {
+  width: 150px; 
+  height: auto; 
+  border: 5px solid white; 
+  border-radius: 10px; 
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.5);
 }
