--- a/PHASE2/merchandise.css
+++ b/PHASE2/merchandise.css
@@ -1,3 +1,9 @@
+/*Maria Angel Palacios
+    03/01/2024
+    IT202-006 -> Phase 2 Project 
+    mp352@njit.edu 
+*/
+
 table, th, td {
     border: 3px dashed white;
     margin: 0; 
