--- a/PHASE2/style_shipping.css
+++ b/PHASE2/style_shipping.css
@@ -1,3 +1,8 @@
+/*Maria Angel Palacios
+    03/01/2024
+    IT202-006 -> Phase 2 Project 
+    mp352@njit.edu 
+*/
 body {
   margin: 0;
   padding: 0;
