--- a/PHASE3/style_shipping.css
+++ b/PHASE3/style_shipping.css
@@ -44,3 +44,9 @@ img {
   border-radius: 10px; 
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.5);
 }
+h6{
+  font-family: 'Courier New', Courier, monospace;
+  font-style: normal;
+  font-size: 14px;
+
+}
