--- a/PHASE3/merchandise.css
+++ b/PHASE3/merchandise.css
@@ -13,8 +13,9 @@ table, th, td {
 
 
 body{
-    background-color: #ffebeb;
+    background-color: #fff6f6;
     font-family: 'Courier New', Courier, monospace;
+    color: #132743;
 
 }
 
