--- a/PHASE3/merchandise.css
+++ b/PHASE3/merchandise.css
@@ -26,14 +26,14 @@ header{
     padding: 4px; 
     text-align: center; 
     margin-top:20;
-    font-size: 18px; /* Adjust as needed */
+    font-size: 18px; 
 }
 
 footer {
     padding: 0px;
     position:relative; 
     margin-left: 0px;
-    font-size: 18px; /* Adjust as needed */
+    font-size: 18px; 
 }
 .product-image{
     width: 150px;
@@ -50,8 +50,8 @@ figcaption {
 .product-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center; /* Align items horizontally */
-    gap: 20px; /* Adjust the space between items */
+    justify-content: center; 
+    gap: 20px; 
     text-align: center;
 }
 
