done! everything works, just waiting to check in tomorrow

--- a/PHASE4/style_shipping.css
+++ b/PHASE4/style_shipping.css
@@ -5,7 +5,7 @@
 */
 body {
   margin: 0;
-  padding: 20px 20px 0; /* Ajustado el padding para proporcionar espacio en la parte superior */
+  padding: 0;
   background-image: url('imagesPh1/parcels-box-cardboard-boxes-smartphone-online-delivery-transportation-logistics-concept-pink-background-3d-rendering-illustration.jpg');
   padding-left: 20px;
   background-size: cover;
@@ -16,19 +16,25 @@ body {
   color: black;
 }
 
+.input-field {
+  width: 30%;
+  padding: 8px;
+  border: 1px solid black;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-bottom: 12px;
+}
+
 main {
   width: 600px;
-  margin: 0 auto; 
-  padding: 20px; /* Agregando padding en todos los lados */
+  margin: 40px auto 20px;
+  padding: 10px;
   border: 5px dashed #F9E6E7;
-  margin-left: 25px; 
-  font-family: 'Courier New', Courier, monospace;
+  margin-left: 0px;
 }
 
 h3 {
   font-family: 'Courier New', Courier, monospace;
-  margin-top: -55px; 
-  margin-bottom: 30px; /* Aumentado el espacio entre etiquetas */
 }
 
 img {
@@ -37,12 +43,10 @@ img {
   border: 5px solid white; 
   border-radius: 10px; 
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.5);
-  margin-bottom: 30px; /* Aumentado el espacio entre etiquetas */
 }
-
-h6 {
+h6{
   font-family: 'Courier New', Courier, monospace;
   font-style: normal;
   font-size: 14px;
-  margin-bottom: 30px; /* Aumentado el espacio entre etiquetas */
+
 }
