--- a/PHASE4/merchandise.css
+++ b/PHASE4/merchandise.css
@@ -1,6 +1,6 @@
 /*Maria Angel Palacios
-    03/01/2024
-    IT202-006 -> Phase 2 Project 
+    04/04/2024
+    IT202-006 -> Phase 4 Project 
     mp352@njit.edu 
 */
 
@@ -15,8 +15,8 @@ table, th, td {
 
 body{
     background-color:#f7e8f6;
-    background-size: 1400px; /* Adjust as needed */
-    background-position: center ; /* Add this line */
+    background-size: 1400px; 
+    background-position: center ; 
     font-family: 'Courier New', Courier, monospace;
     color: #23354e;
 }
